manifests/13-networkpolicy-phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-to-phpmyadmin
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: phpmyadmin
  policyTypes:
  - Ingress
  ingress: 
    - ports:
        - protocol: TCP
          port: 80
